# python-project-lvl3-old

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
page_loader/: __init__.py  cli.py  loader.py
page_loader/scripts/: page_loader.py
tests/: test_loader.py
tests/fixtures/: page.html
