[tool.poetry]
name = "hexlet-code"
version = "0.1.5"
description = ""
authors = ["Vladislav Sviridov <v.sviridov.dev@gmail.com>"]

packages = [
  { include = "page_loader" }
]

[tool.poetry.scripts]
page_loader = "page_loader.scripts.page_loader:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
requests = "^2.25.1"
requests-mock = "^1.8.0"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
